2010-09-02  Kouhei Sutou  <kou@cozmixng.org>

	* ./: reconstruct directory structure for rake-compiler.

2010-07-24  Nikolai Weibull

	src/rbgutil.c: make sure that all strings are fred in
	rbgutil_glist2ary_string_and_free.

2010-07-23  Nikolai Weibull

	src/rbgutil.c: use rb_ensure around all *_free functions and also fix a
	bug that made sure that no lists were actually freed.  That's the price
	of reusing variables.

2010-07-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.c: fix coding style.

2010-07-12  Nikolai Weibull

	* src/rbglib.c: use rb_ensure for rbg_cstr_to_rval to free the memory
	even if an error occurs when creating the Ruby String.

2010-04-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.19.4 -> 0.20.0.

2010-04-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_typeinstance.c (each_cinfo): fix a memory leak.

2010-02-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb, src/lib/glib-mkenums.rb: add
	{:force_flags => [pattern1, ...]} options to glib_mkenums to force
	treating detected enum as flags.

2010-02-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil.[ch], src/glib2.def: add
	rbgutil_string_set_utf8_encoding() for Ruby 1.9.
	* extconf.rb: detect rb_enc_associate().

2010-02-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_closure.c, src/rbgobj_signal.c, src/rbgobject.h,
	srb/glib2.def: set tag to GRClosure for debugging.

2009-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c: fix type_register on Ruby 1.9.
	don't use each_with_index in C because
	rb_iterate() API seems changed in Ruby 1.9.
	Reported by Simon Arnaud. Thanks!!!

2009-09-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RBGLIB_MICRO_VERSION): 0.19.3 -> 0.19.4.

	* src/lib/mkmf-gnome2.rb: add missing nil check.
	Reported by Simon Arnaud. Thanks!!!

	* src/lib/mkmf-gnome2.rb: use INCFLAGS instead of CPPFLAGS.

2009-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RBGLIB_MICRO_VERSION): 0.19.2 -> 0.19.3.
