@@ -4,21 +4,35 @@ extconf.rb for Ruby/GLib extention library
 
 require 'pathname'
 
-TOPDIR = Pathname(__FILE__).dirname.parent.parent.expand_path
-MKMF_GNOME2_DIR = TOPDIR + 'lib'
-SRCDIR = TOPDIR + '/glib/src'
+base_dir = Pathname(__FILE__).dirname.parent.parent.expand_path
+mkmf_gnome2_dir = base_dir + 'lib'
 
-$LOAD_PATH.unshift MKMF_GNOME2_DIR.to_s
+$LOAD_PATH.unshift(mkmf_gnome2_dir.to_s)
 
-PACKAGE_NAME = "glib2"
-PACKAGE_ID   = "gobject-2.0"
+module_name = "glib2"
+package_id = "gobject-2.0"
 
 require 'mkmf-gnome2'
 
-PKGConfig.have_package(PACKAGE_ID) or exit 1
-PKGConfig.have_package('gthread-2.0')
+checking_for(checking_message("Win32 OS")) do
+  case RUBY_PLATFORM
+  when /cygwin|mingw|mswin32/
+    import_library_name = "libruby-#{module_name}.a"
+    $DLDFLAGS << " -Wl,--out-implib=#{import_library_name}"
+    $cleanfiles << import_library_name
+    binary_base_dir = base_dir + "vendor" + "local"
+    $CFLAGS += " -I#{binary_base_dir}/include"
+    pkg_config_dir = binary_base_dir + "lib" + "pkgconfig"
+    PKGConfig.add_path(pkg_config_dir.to_s)
+    PKGConfig.set_override_variable("prefix", binary_base_dir.to_s)
+    true
+  else
+    false
+  end
+end
 
-setup_win32(PACKAGE_NAME)
+PKGConfig.have_package(package_id) or exit 1
+PKGConfig.have_package('gthread-2.0')
 
 have_header("unistd.h")
 have_header("io.h")
@@ -43,7 +57,7 @@ have_func("rb_str_encode", ruby_header)
 have_var("curr_thread", [ruby_header, "node.h"])
 have_var("rb_curr_thread", [ruby_header, "node.h"])
 
-create_pkg_config_file("Ruby/GLib2", PACKAGE_ID)
+create_pkg_config_file("Ruby/GLib2", package_id)
 
 enum_type_prefix = "glib-enum-types"
 include_paths = PKGConfig.cflags_only_I("glib-2.0")
@@ -59,4 +73,4 @@ end
 glib_mkenums(enum_type_prefix, headers, "G_TYPE_", ["glib-object.h"])
 
 $defs << "-DRUBY_GLIB2_COMPILATION"
-create_makefile(PACKAGE_NAME)
+create_makefile(module_name)
