@@ -1,3 +1,7 @@
+2010-09-07  Kouhei Sutou  <kou@cozmixng.org>
+
+	* ./: support cross-compile for Windows.
+
 2010-09-02  Kouhei Sutou  <kou@cozmixng.org>
 
 	* ./: reconstruct directory structure for rake-compiler.
